docs: finishing up installation chapter